--- a/web/public/templates/index.dust
+++ b/web/public/templates/index.dust
@@ -1,6 +1,6 @@
 {>"layouts/master" /}
 <div style="width: 832px; margin: 100px auto">
-<h1><span id="startup"></span> Death Click</h1>
+<h1><span id="startup"></span> Death Clock</h1>
 
 <div id="deathbg">
 <div id="death"></div>
@@ -19,9 +19,7 @@
 
 <li><h2>What is this?</h2>
 <p>
-TEST
-
-The startup death click tells you when your startup will run out of money.
+The startup death clock tells you when your startup will run out of money.
 
 Try it yourself:
 <label for="name">Startup Name</label>
